@@ -53,7 +53,7 @@ Documentation using the default theme
 * PyPubSub: http://pubsub.sourceforge.net/
 * pyrticle: http://documen.tician.de/pyrticle/
 * pySPACE: http://pyspace.github.io/pyspace/
-* Python: http://docs.python.org/
+* Python: https://docs.python.org/
 * python-apt: http://apt.alioth.debian.org/python-apt-doc/
 * PyUblas: http://documen.tician.de/pyublas/
 * Quex: http://quex.sourceforge.net/doc/html/main.html
