@@ -12,7 +12,7 @@
   <p>{%trans%}
     Sphinx is a tool that makes it easy to create intelligent and beautiful
     documentation, written by Georg Brandl and licensed under the BSD license.{%endtrans%}</p>
-  <p>{%trans%}It was originally created for <a href="http://docs.python.org/">the
+  <p>{%trans%}It was originally created for <a href="https://docs.python.org/">the
     new Python documentation</a>, and it has excellent facilities for the
     documentation of Python projects, but C/C++ is already supported as well,
     and it is planned to add special support for other languages as well.  Of
